// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HttpIntegrationDetail component should display data about the integration 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations/http"
          >
            HTTP
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          my little integration
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <p>
      Add the details about the HTTP integration you want to add below. If you need help, you can check our 
       
      <a
        href="http://docs.gorgias.io/integrations/http-integrations#Connecting_your_own_back-office"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
       or contact us.
    </p>
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <InputField
        label="Integration name"
        name="name"
        onChange={[Function]}
        required={true}
        type="text"
        value="my little integration"
      />
      <InputField
        label="Description"
        name="description"
        onChange={[Function]}
        type="text"
        value="just a small integration, which is very practical and friendly"
      />
      <FormGroup
        tag="div"
      >
        <Label
          className="control-label"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Triggers
        </Label>
        <p>
          <FormText
            color="muted"
            tag="small"
          >
            This HTTP integration will be executed when any of the events below happens.
          </FormText>
        </p>
        <BooleanField
          label="Ticket created"
          name="http.triggers.ticket-created"
          onChange={[Function]}
          type="checkbox"
          value={true}
        />
        <BooleanField
          label="Ticket updated"
          name="http.triggers.ticket-updated"
          onChange={[Function]}
          type="checkbox"
          value={false}
        />
      </FormGroup>
      <InputField
        error="Only https protocol allowed"
        help={
          <div>
            You can use 
            <code>
              {{ticket.requester.email}}
            </code>
             to pass the email of the ticket requester. See other 
            <a
              href="http://api.gorgias.io/#/definitions/User"
              rel="noopener noreferrer"
              target="_blank"
            >
              vars
            </a>
            .
          </div>
        }
        label="URL"
        name="http.url"
        onChange={[Function]}
        pattern="$a"
        placeholder="https://company.com/api/users?email={{ticket.requester.email}}"
        required={true}
        title="Example: https://company.com/api"
        type="url"
        value="http://httpbin.org/post"
      />
      <InputField
        label="HTTP Method"
        name="http.method"
        onChange={[Function]}
        required={true}
        type="select"
        value="POST"
      >
        <option
          value="GET"
        >
          GET
        </option>
        <option
          value="POST"
        >
          POST
        </option>
        <option
          value="PUT"
        >
          PUT
        </option>
        <option
          value="DELETE"
        >
          DELETE
        </option>
      </InputField>
      <InputField
        label="Request content type"
        name="http.request_content_type"
        onChange={[Function]}
        required={true}
        type="select"
        value="application/json"
      >
        <option
          value="application/json"
        >
          application/json
        </option>
      </InputField>
      <InputField
        label="Response content type"
        name="http.response_content_type"
        onChange={[Function]}
        required={true}
        type="select"
        value="application/json"
      >
        <option
          value="application/json"
        >
          application/json
        </option>
      </InputField>
      <FormGroup
        tag="div"
      >
        <HeaderFieldArray
          fields={
            Array [
              Object {
                "key": "Authorization",
                "value": "Bearer a57sd4as6d4",
              },
              Object {
                "key": "Foo",
                "value": "bar",
              },
            ]
          }
          name="http.headers"
          onChange={[Function]}
        />
      </FormGroup>
      <JsonField
        label="Request Body (JSON)"
        name="http.form"
        onChange={[Function]}
        rows="8"
        type="text"
        value={
          Object {
            "baz": Object {
              "bazile": "bazar",
            },
            "foo": "bar",
          }
        }
      />
      <div>
        <Button
          className="mr-2"
          color="success"
          disabled={false}
          tag="button"
          type="submit"
        >
          Save changes
        </Button>
        <Button
          className=""
          color="warning"
          onClick={[Function]}
          outline={true}
          tag="button"
          type="button"
        >
          Deactivate integration
        </Button>
        <ConfirmButton
          className="float-right"
          color="secondary"
          confirm={[Function]}
          content="Are you sure you want to delete this integration?"
          disabled={false}
          loading={false}
          placement="bottom"
          skip={false}
          title="Are you sure?"
          type="button"
        >
          <i
            className="material-icons mr-1 text-danger"
          >
            delete
          </i>
          Delete integration
        </ConfirmButton>
      </div>
    </Form>
  </Container>
</div>
`;

exports[`HttpIntegrationDetail component should display default if it's a new integration 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations/http"
          >
            HTTP
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          Add new HTTP integration
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <p>
      Add the details about the HTTP integration you want to add below. If you need help, you can check our 
       
      <a
        href="http://docs.gorgias.io/integrations/http-integrations#Connecting_your_own_back-office"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
       or contact us.
    </p>
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <InputField
        label="Integration name"
        name="name"
        onChange={[Function]}
        required={true}
        type="text"
        value=""
      />
      <InputField
        label="Description"
        name="description"
        onChange={[Function]}
        type="text"
        value=""
      />
      <FormGroup
        tag="div"
      >
        <Label
          className="control-label"
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          Triggers
        </Label>
        <p>
          <FormText
            color="muted"
            tag="small"
          >
            This HTTP integration will be executed when any of the events below happens.
          </FormText>
        </p>
        <BooleanField
          label="Ticket created"
          name="http.triggers.ticket-created"
          onChange={[Function]}
          type="checkbox"
          value={true}
        />
        <BooleanField
          label="Ticket updated"
          name="http.triggers.ticket-updated"
          onChange={[Function]}
          type="checkbox"
          value={true}
        />
      </FormGroup>
      <InputField
        error={null}
        help={
          <div>
            You can use 
            <code>
              {{ticket.requester.email}}
            </code>
             to pass the email of the ticket requester. See other 
            <a
              href="http://api.gorgias.io/#/definitions/User"
              rel="noopener noreferrer"
              target="_blank"
            >
              vars
            </a>
            .
          </div>
        }
        label="URL"
        name="http.url"
        onChange={[Function]}
        pattern="*"
        placeholder="https://company.com/api/users?email={{ticket.requester.email}}"
        required={true}
        title="Example: https://company.com/api"
        type="url"
        value=""
      />
      <InputField
        label="HTTP Method"
        name="http.method"
        onChange={[Function]}
        required={true}
        type="select"
        value="GET"
      >
        <option
          value="GET"
        >
          GET
        </option>
        <option
          value="POST"
        >
          POST
        </option>
        <option
          value="PUT"
        >
          PUT
        </option>
        <option
          value="DELETE"
        >
          DELETE
        </option>
      </InputField>
      <InputField
        label="Request content type"
        name="http.request_content_type"
        onChange={[Function]}
        required={true}
        type="select"
        value="application/json"
      >
        <option
          value="application/json"
        >
          application/json
        </option>
      </InputField>
      <InputField
        label="Response content type"
        name="http.response_content_type"
        onChange={[Function]}
        required={true}
        type="select"
        value="application/json"
      >
        <option
          value="application/json"
        >
          application/json
        </option>
      </InputField>
      <FormGroup
        tag="div"
      >
        <HeaderFieldArray
          fields={Array []}
          name="http.headers"
          onChange={[Function]}
        />
      </FormGroup>
      <div>
        <Button
          className="mr-2"
          color="success"
          disabled={false}
          tag="button"
          type="submit"
        >
          Add integration
        </Button>
      </div>
    </Form>
  </Container>
</div>
`;

exports[`HttpIntegrationDetail component should display loading state if the integration is loading 1`] = `
<Loader
  inline={false}
/>
`;
